add cubed synth

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <option value="nosynth">No synth</option>
             <option value="oneoverf">1 / f</option>
             <option value="oneoverfsquared">1 / f^2</option>
+            <option value="oneoverfcubed">1 / f^3</option>
 	</select>
         <div class="slidecontainer">
             <p>Base Frequency: <span id="freqLabel"></span></p>
