--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
             <input type="range" min="40" max="1000" value="220" class="slider" id="frequency">
         </div>
     </div>
-    <div data-fundamental="0" class="fundamental_button">Root</div>
-    <div data-fundamental="1" class="fundamental_button">Minor Second</div>
-    <div data-fundamental="2" class="fundamental_button">Natural Second</div>
-    <div data-fundamental="3" class="fundamental_button">Minor Third</div>
-    <div data-fundamental="4" class="fundamental_button">Major Third</div>
-    <div data-fundamental="5" class="fundamental_button">Natural Fourth</div>
-    <div data-fundamental="6" class="fundamental_button">Augmented Fourth</div>
-    <div data-fundamental="7" class="fundamental_button">Diminished Fifth</div>
-    <div data-fundamental="8" class="fundamental_button">Natural Fifth</div>
-    <div data-fundamental="9" class="fundamental_button">Minor Sixth</div>
-    <div data-fundamental="10" class="fundamental_button">Major Sixth</div>
-    <div data-fundamental="11" class="fundamental_button">Minor Seventh</div>
-    <div data-fundamental="12" class="fundamental_button">Major Seventh</div>
-    <div data-fundamental="13" class="fundamental_button">Unison</div>
+    <div data-tonebutton="0" class="tonebutton">Root</div>
+    <div data-tonebutton="1" class="tonebutton">Minor Second</div>
+    <div data-tonebutton="2" class="tonebutton">Natural Second</div>
+    <div data-tonebutton="3" class="tonebutton">Minor Third</div>
+    <div data-tonebutton="4" class="tonebutton">Major Third</div>
+    <div data-tonebutton="5" class="tonebutton">Natural Fourth</div>
+    <div data-tonebutton="6" class="tonebutton">Augmented Fourth</div>
+    <div data-tonebutton="7" class="tonebutton">Diminished Fifth</div>
+    <div data-tonebutton="8" class="tonebutton">Natural Fifth</div>
+    <div data-tonebutton="9" class="tonebutton">Minor Sixth</div>
+    <div data-tonebutton="10" class="tonebutton">Major Sixth</div>
+    <div data-tonebutton="11" class="tonebutton">Minor Seventh</div>
+    <div data-tonebutton="12" class="tonebutton">Major Seventh</div>
+    <div data-tonebutton="13" class="tonebutton">Unison</div>
 </div>
 <script src="js/vendor/modernizr-3.5.0.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"
