--- a/index.html
+++ b/index.html
@@ -28,16 +28,13 @@
         <button class="control_button" type="button" , onclick="random_base_freq()">random frequency!</button>
 	<select id="tuningselector" onChange="updateTuning()" class="control_button">
             <option value="just">Just</option>
-            <option value="pythagorean">Pythagorean</option>
             <option value="equal">Equal</option>
-            <option value="ptolemaian">Ptolemaian</option>
+            <option value="pythagorean">Pythagorean</option>
 	</select>
-	<select id="synthselector" onChange="updateSynth()" class="control_button">
-            <option value="nosynth">No synth</option>
-            <option value="oneoverf">1 / f</option>
-            <option value="oneoverfsquared">1 / f^2</option>
-            <option value="oneoverfcubed">1 / f^3</option>
-	</select>
+    <div class="tooltip">Synthesizer Amplitude Decay Function
+        <span class="tooltiptext">A synth note can be made up of overtones of increasing order. The amplitudes of overtones here decay with 1/f^p, where f is their order and p is the number in the field to the right. A higher number means that higher overtones are dampened stronger and less audible.</span>
+    </div>
+        <input type="number" id="freq_pow" value="3" max="9" min="0" onchange="update_freq_pow(this.value)">
         <div class="slidecontainer">
             <p>Base Frequency: <span id="freqLabel"></span></p>
             <input type="range" min="40" max="1000" value="220" class="slider" id="frequency">
