add another octave for spread chords :)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div data-tonebutton="0" class="tonebutton">Root</div>
-    <div data-tonebutton="1" class="tonebutton">Minor Second</div>
+    <div data-tonebutton="1" class="tonebutton">Flat Second</div>
     <div data-tonebutton="2" class="tonebutton">Natural Second</div>
     <div data-tonebutton="3" class="tonebutton">Minor Third</div>
     <div data-tonebutton="4" class="tonebutton">Major Third</div>
@@ -45,11 +45,23 @@
     <div data-tonebutton="6" class="tonebutton">Augmented Fourth</div>
     <div data-tonebutton="7" class="tonebutton">Diminished Fifth</div>
     <div data-tonebutton="8" class="tonebutton">Natural Fifth</div>
-    <div data-tonebutton="9" class="tonebutton">Minor Sixth</div>
-    <div data-tonebutton="10" class="tonebutton">Major Sixth</div>
-    <div data-tonebutton="11" class="tonebutton">Minor Seventh</div>
+    <div data-tonebutton="9" class="tonebutton">Flat Sixth</div>
+    <div data-tonebutton="10" class="tonebutton">Natural Sixth</div>
+    <div data-tonebutton="11" class="tonebutton">Flat Seventh</div>
     <div data-tonebutton="12" class="tonebutton">Major Seventh</div>
     <div data-tonebutton="13" class="tonebutton">Unison</div>
+    <div data-tonebutton="14" class="tonebutton">Flat Ninth</div>
+    <div data-tonebutton="15" class="tonebutton">Natural Ninth</div>
+    <div data-tonebutton="16" class="tonebutton">Minor Third</div>
+    <div data-tonebutton="17" class="tonebutton">Major Third</div>
+    <div data-tonebutton="18" class="tonebutton">Natural Eleventh</div>
+    <div data-tonebutton="19" class="tonebutton">Augmented Eleventh</div>
+    <div data-tonebutton="20" class="tonebutton">Diminished Fifth</div>
+    <div data-tonebutton="21" class="tonebutton">Natural Fifth</div>
+    <div data-tonebutton="22" class="tonebutton">Flat Thirteenth</div>
+    <div data-tonebutton="23" class="tonebutton">Natural Thirteenth</div>
+    <div data-tonebutton="24" class="tonebutton">Flat Seventh</div>
+    <div data-tonebutton="25" class="tonebutton">Major Seventh</div>
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
