add waveform and spectrum viewer

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
             <input type="range" min="40" max="1000" value="220" class="slider" id="frequency">
         </div>
     </div>
+    <div id="canvas">
+         <canvas id="wave" width="200" height="100" style="border:1px solid #000000;">
+</canvas>
+    <div id="canvas2">
+         <canvas id="spectrum" width="200" height="100" style="border:1px solid #000000;">
+</canvas>
+    </div>
     <div data-tonebutton="0" class="tonebutton">Root</div>
     <div data-tonebutton="1" class="tonebutton">Flat Second</div>
     <div data-tonebutton="2" class="tonebutton">Natural Second</div>
